<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Estacion"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/caja_pedir_pedidos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="280dp"
                android:id="@+id/pedir_pedidos"
                android:layout_height="80dp"
                android:hint="@string/texto2"
                android:textSize="30dp"
                android:layout_margin="150dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/borde"
                />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:id="@+id/caja_lista_pedidos_recycler"
        android:visibility="visible"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:layout_margin="6dp"
                android:id="@+id/caja_lista_pedidos"

                >
                <TextView
                    android:layout_width="match_parent"
                    android:background="@drawable/borde"
                    android:textSize="15dp"
                    android:text="@string/texto4"
                    android:textColor="@color/black"
                    android:layout_height="55dp"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/caja_pedidos_espera_l"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:orientation="vertical"
                android:gravity="left"
                android:layout_margin="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:background="@drawable/borde"
                    android:gravity="center"
                    android:textSize="15dp"
                    android:text="@string/texto5"
                    android:textColor="@color/black"
                    android:layout_height="55dp"
                    android:layout_marginRight="20dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/caja_recycler_pedidos"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:visibility="visible"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/lista_pedidos_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"

                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="30dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:orientation="vertical"
            android:id="@+id/caja_lista_espera_recycler"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/lista_espera_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:gravity="center"
                    android:hint="@string/texto2"
                    android:textColor="@color/black"
                    android:textSize="30dp" />
            </LinearLayout>

        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/caja_cerrar_sesion"
            android:visibility="visible">
            <TextView
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:gravity="center"
                android:background="@drawable/borde"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/texto6"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/caja_asignar_mecero"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/white"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="50dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/meceros_disponibles"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/texto2"
                android:textColor="@color/black"
                android:textSize="30dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/white"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/confirmar_mecero"
                android:layout_width="250dp"
                android:layout_height="70dp"
                android:layout_margin="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/borde"
                android:gravity="center"
                android:text="@string/texto7"
                android:textColor="@color/black"
                android:textSize="35dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/caja_velo_mecero"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:gravity="center"
            android:alpha="0.6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone">
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/caja_confirmar_mecero"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/white"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="70dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="50dp">
                <TextView
                    android:id="@+id/texto_asignador"
                    android:layout_width="250dp"
                    android:layout_height="70dp"
                    android:background="@drawable/borde"
                    android:gravity="center"

                    android:textColor="@color/black"
                    android:textSize="20dp"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/confirmar_si"
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:layout_margin="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/borde"
                android:gravity="center"
                android:text="Si"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                />
            <TextView
                android:id="@+id/confirmar_no"
                android:layout_width="130dp"
                android:layout_height="60dp"
                android:layout_margin="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/borde"
                android:gravity="center"
                android:text="no"
                android:textColor="@color/black"
                android:textSize="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
